Corrected an overflow issue with the content-wrapper.

--- a/wp-content/themes/nextstepmaine/sass/layout/_content.scss
+++ b/wp-content/themes/nextstepmaine/sass/layout/_content.scss
@@ -1,7 +1,7 @@
 section.content-wrapper {
 	position: relative ;
 	padding: 30px 0 270px 0 ;
-	overflow: auto ;
+	//overflow: auto ;
 	@include centered ;
 	
 	h1 {
